--- a/action.yaml
+++ b/action.yaml
@@ -2,7 +2,7 @@ name: Open Ecosystem Challenge Verifier
 description: Verifies if a certain Open Ecosystem challenge has been completed successfully
 inputs:
   challenge:
-    description: The name of the challenge to verify. Must match the challenge folder name.
+    description: The name of the challenge to verify.
     required: true
 runs:
   using: node20
